# passlock

./: .gitignore  README.md  build.bat  build.sh  installer_win.iss  passlock.py  passlock.spec  pyproject.toml
.github/workflows/: build.yml
passlock/: __init__.py  __main__.py  cli.py  core.py  gui.py  logger.py
