[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passlock"
version = "1.0.0"
description = "Cross-platform file & folder password protection using AES-256."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "PassLock Contributors"}]
keywords = ["encryption", "password", "security", "aes", "file-protection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=42.0.0",
]

[project.scripts]
passlock = "passlock.cli:main"

[project.gui-scripts]
passlock-gui = "passlock.gui:launch_gui"

[project.urls]
Homepage = "https://github.com/passlock/passlock"

[tool.setuptools.packages.find]
include = ["passlock*"]
